k8s/base/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-demo-active
spec:
  selector:
    app: bluegreen-demo
  ports:
    - port: 80
      targetPort: 8080
